webook/webook-record-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-record-redis
spec:
  selector:
    app: webook-record-redis
  ports:
    - protocol: TCP
    # k8s内部访问接口
      port: 6379
      # 外部访问端口
      nodePort: 31379
      # pod 暴露的端口
      targetPort: 6379
  type: NodePort
